src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <description>Assigns the NY-Engineers employee for this specific account</description>
        <inlineHelpText>Assigns the NY-Engineers employee for this specific account</inlineHelpText>
        <label>Account Manager</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Career_Information__c</fullName>
        <description>Any additional career information the applicant included when they applied online. This may be left blank.</description>
        <label>Additional Career Information</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address of Project</description>
        <label>Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Email__c</fullName>
        <description>Applicant on file (RA, PE, etc) email</description>
        <label>Applicant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Applicant_License_Number__c</fullName>
        <label>Applicant License Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <description>First and Last Name</description>
        <label>Applicant Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Phone__c</fullName>
        <description>Applicant (RA, PE, etc) phone number</description>
        <label>Applicant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bid_Set_Due_Date__c</fullName>
        <description>The approximate bid set due date regarding their project they requested a proposal for.</description>
        <label>Bid Set Due Date (Approximate)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Career_Applicant__c</fullName>
        <label>Career Applicant</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Career_Position_Applied_For__c</fullName>
        <label>Career Position Applied For</label>
        <picklist>
            <picklistValues>
                <fullName>Junior Plumbing/Fire Protection Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior Electrical Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Plumbing/Sprinkler Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEP Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall/Winter 2016 Engineering Intern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Electrical/Fire Alarm Engineer</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Construction_Budget__c</fullName>
        <description>The construction budget they have for the project they requested a proposal for.</description>
        <label>Construction Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Construction_Completion_Date__c</fullName>
        <description>The approximate construction completion date of the project they requested a proposal for.</description>
        <label>Construction Completion Date (Approx.)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Yearly_Salary__c</fullName>
        <inlineHelpText>Current Yearly Salary for Career Applicants</inlineHelpText>
        <label>Current Yearly Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DOB_CONTACT_TYPE__c</fullName>
        <label>DOB CONTACT TYPE</label>
        <picklist>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Application_Filed__c</fullName>
        <description>DOB Date</description>
        <label>Date Application Filed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_for_API__c</fullName>
        <description>Date NYE Received information about project from DOB</description>
        <label>Date for API</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the introduction (default) email been sent?</description>
        <label>Email Sent?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_or_Proposed_Plans__c</fullName>
        <description>Any existing or proposed plans regarding the project they&apos;re requesting a proposal for.</description>
        <label>Existing or Proposed Plans</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Follow up with this Lead in the Future</description>
        <inlineHelpText>Follow up with this Lead in the Future</inlineHelpText>
        <label>Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Cost__c</fullName>
        <description>Cost associated with the project on the DOB Job Application</description>
        <label>Initial Cost ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Criteria__c</fullName>
        <description>The X values on the Excel Sheet, Please mark all that apply</description>
        <label>Job Criteria</label>
        <picklist>
            <picklistValues>
                <fullName>Mechanical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plumbing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprinkler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Suppression</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Alarm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <description>DOB Job Filing Number</description>
        <label>Job Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <description>Hot is &quot;Request a Proposal&quot; ; Warm is &quot;Contact Form&quot; of any type; Cold is &quot;Get In Touch (either Contact Us or About Us)</description>
        <inlineHelpText>Hot is &quot;Request a Proposal&quot; ; Warm is &quot;Contact Form&quot; of any type; Cold is &quot;Get In Touch (either Contact Us or About Us)</inlineHelpText>
        <label>Lead Score</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <description>Categorization of Contact used for developing List views which can be displayed in the Console</description>
        <inlineHelpText>Categorization of Contact used for developing List views which can be displayed in the Console</inlineHelpText>
        <label>Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker - Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coop Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datacenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Landlord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceutical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential - Affordable Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Narrative_Description_of_Project__c</fullName>
        <description>A narrative description of the project they requested a proposal for.</description>
        <label>Narrative Description of Project</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>New_Building_or_Renovation__c</fullName>
        <description>Whether the project they requested a proposal for is a new building or a renovation.</description>
        <label>New Building or Renovation</label>
        <picklist>
            <picklistValues>
                <fullName>New Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renovation</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_City__c</fullName>
        <label>Owner City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Company__c</fullName>
        <description>Owner Company Name</description>
        <label>Owner Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <description>Building Owner&apos;s Email on File at DOB as per application 
This is manually obtained from job application</description>
        <label>Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner_First_Name__c</fullName>
        <description>First Name</description>
        <label>Owner First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Last_Name__c</fullName>
        <label>Owner Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Phone__c</fullName>
        <description>Owners Phone Number</description>
        <label>Owner Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_State__c</fullName>
        <label>Owner State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Street__c</fullName>
        <label>Owner Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Zip__c</fullName>
        <label>Owner Zip</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Dialer__c</fullName>
        <description>auto format phone, delete +1 and . for five9 dialer
not editable</description>
        <formula>SUBSTITUTE(Phone, &apos;+1.&apos;, &apos; &apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>not editable for five 9 dialer</inlineHelpText>
        <label>Phone Dialer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Photos__c</fullName>
        <description>Any photos of the project they&apos;re requesting a proposal for.</description>
        <label>Project Photos</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Project_Square_Footage__c</fullName>
        <description>The square footage of the project they requested a proposal for.</description>
        <label>Project Square Footage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Email__c</fullName>
        <description>If the email address that should be on the proposal is different than the person requesting it, insert it here.</description>
        <label>Proposal Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Name__c</fullName>
        <description>If the name that should be on the proposal is different than the person requesting it, insert it here.</description>
        <label>Proposal Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Phone_Number__c</fullName>
        <description>If the phone number that should be on the proposal is different than the person requesting it, insert it here.</description>
        <label>Proposal Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Number_of_Stories__c</fullName>
        <label>Proposed Number of Stories</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_A_Proposal__c</fullName>
        <label>Requested A Proposal</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <description>Career Resume for Applicants</description>
        <label>Resume</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <description>The address of the site they are requesting a proposal for.</description>
        <label>Site Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Project__c</fullName>
        <description>The type of project they are requesting a proposal for.</description>
        <label>Type of Project</label>
        <picklist>
            <picklistValues>
                <fullName>Health Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Useful_Documents__c</fullName>
        <description>Any useful documents they have regarding the project they&apos;re requesting the proposal for.</description>
        <label>Useful Documents</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>What_Can_We_Help_You_With__c</fullName>
        <description>When someone fills out the contact us form on the website, this tells why they contacted NYE.</description>
        <label>What Can We Help You With?</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Architects</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Type__c</field>
            <operation>equals</operation>
            <value>Architect</value>
        </filters>
        <label>Architects</label>
    </listViews>
    <listViews>
        <fullName>Building</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Type__c</field>
            <operation>equals</operation>
            <value>Building</value>
        </filters>
        <label>Buildings</label>
    </listViews>
    <listViews>
        <fullName>Career_Applicants</fullName>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>Career_Position_Applied_For__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Current_Yearly_Salary__c</columns>
        <columns>Additional_Career_Information__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>What_Can_We_Help_You_With__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Career_Applicant__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Career Applicants</label>
    </listViews>
    <listViews>
        <fullName>Follow_UP</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Follow_Up__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Follow Up</label>
    </listViews>
    <listViews>
        <fullName>Follow_UP_30_Days_Old</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LAST_ACTIVITY</field>
            <operation>greaterThan</operation>
            <value>LAST_N_DAYS:3</value>
        </filters>
        <label>Follow Up 30 Days Old</label>
    </listViews>
    <listViews>
        <fullName>Govt_Agency</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Type__c</field>
            <operation>equals</operation>
            <value>Govt Agency</value>
        </filters>
        <label>Govt Agency</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>Property_Managers</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Type__c</field>
            <operation>equals</operation>
            <value>Property Mgr</value>
        </filters>
        <label>Property Managers</label>
    </listViews>
    <listViews>
        <fullName>Real_Estate_Developers</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Type__c</field>
            <operation>equals</operation>
            <value>Real Estate Dev</value>
        </filters>
        <label>Real Estate Developers</label>
    </listViews>
    <listViews>
        <fullName>Requested_A_Proposal</fullName>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Site_Address__c</columns>
        <columns>Project_Square_Footage__c</columns>
        <columns>New_Building_or_Renovation__c</columns>
        <columns>Narrative_Description_of_Project__c</columns>
        <columns>Bid_Set_Due_Date__c</columns>
        <columns>Construction_Completion_Date__c</columns>
        <columns>Type_of_Project__c</columns>
        <columns>Construction_Budget__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Requested_A_Proposal__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Requested A Proposal</label>
    </listViews>
    <listViews>
        <fullName>Service</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Type__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </filters>
        <label>Service</label>
    </listViews>
    <listViews>
        <fullName>Tenant</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.URL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lead_Type__c</field>
            <operation>equals</operation>
            <value>Tenant</value>
        </filters>
        <label>Tenant</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>Lead_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>1/24/2017 12:00 AM</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>